--- a/Notes/Unit4/Unit4.tex
+++ b/Notes/Unit4/Unit4.tex
@@ -227,5 +227,59 @@
 
 
 
+\section{Discussion Section}
+\begin{itemize}
+    \item \marginnote{5/4:}Midterm 2 is 5/25/2021.
+    \item Final paper due 5/26/2021; Sophie has asked Dr. Anderson for more information.
+    \begin{itemize}
+        \item Due at noon.
+        \item Sophie will post an example paper.
+        \item As the last assignment for this course, you will write a critical review of 1 of 6 availabble papers.
+        \item Some of these papers include material outside the scope of organometallic chemistry. Try to focus on topics relevant to this course. The reviews should be no longer than 700 words not including citations or fiugre captions, althouggh additional ccitations are not requried if you only use information presented in the paper or the class. The critique should be written with Times New Roman 12 point font and 0.5 inch margins.
+        \item General outline fofr the critiques:
+        \begin{itemize}
+            \item 1 introduction paragraph.
+            \item 2 experimental summary paragraphs.
+            \item 3 discussion paragraphs.
+            \item 4 critique paragraphs.
+            \item Figures.
+        \end{itemize}
+        \item Sophie is willing to look over assignments (email them to her), but we have to get them to her by the 19th for her to take a look.
+        \item They should be professional but not excessively formal.
+        \item A more detailed outline will be published later.
+        \item A critique isn't necessarily a flaw, but more a suggestion of another experiment they could run or some other conclusion they could have drawn.
+    \end{itemize}
+    \item Final is 6/3/2021.
+    \item Midterm 1:
+    \begin{itemize}
+        \item Biggest issues:
+        \begin{itemize}
+            \item Running out of time.
+            \item Omitting parts of answers (generally not reading instructions in general). If it says draw orbitals, explain, or predict, you need to do that.
+        \end{itemize}
+        \item She'll talk to John about making it/the next one shorter.
+        \item Syntheses are only one point?
+        \item If we would like to know more feedback about our exams, we can reach out with specific questions about questions.
+        \item 1a: Reduce with \ce{Na} or \ce{Hg} metal and then throw in \ce{MeI}. \ce{$\frac{1}{2}$ Mn2(CO)10 ->[Na/Hg][-2NaCl] Na[Mn(CO)5] ->[MeI][-NaI]}.
+        \item 3a: Like-signed lobes donate (\emph{correct notes}?). You can also show either $d_{x^2-y^2}$ or $d_{z^2}$ for $\sigma$ donation.
+        \item 3b: We need charges on the metal in \ce{M-C#O+} resonance structures (-, 0, +).
+        \item 3c: Also identify the dominant resonance structure.
+        \item 4c: Cp can ring-slip to stabilize the electron count.
+        \item 4d: Cone angle starts at metal center and includes specifically the full van der Waals radii of the phosphine R groups at the base fo the cone. Most commonly forgotten: metal center, van der Waals radii.
+        \item 4f: \ce{H2CrO4} is \ce{Cr^6+}, $d^0$, while \ce{Cr(CO)4^4-} is \ce{Cr^4-}, $d^{10}$. The difference is different than you expect because they are actually very similar.
+        \item 5: First, backcalcculate out spin-state to determine $S=1$ and $S=0$. Second, luckily, they're 4-coordinate, so the simplest solutin is to loook for two geometries that ggive the two spin states. You interconvert the things in solution, giving a mixed magnetic moment. $\mu=2\sqrt{S(S+1)}$.
+        \item 6: \ce{Cp-} is a $\pi$ donor. Cyclobutadiene is both (the orbital drawing shows that you have a HOMO $\pi$ donor and a LUMO $\pi$ acceptor).
+        \item 7: No extra sites for a better bridge and only bad bridges present (if you draw them you can tell). Whenever you need to compare two ligands, think:
+        \begin{enumerate}
+            \item Chelate? Neither ligand.
+            \item Hard/soft affinity? Both hard.
+            \item Strong field? Isocyanide much stronger, more likely all low spin.
+            \item Trans effect? All the same ligand.
+        \end{enumerate}
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
