--- a/Notes/Unit2/Unit2.tex
+++ b/Notes/Unit2/Unit2.tex
@@ -509,10 +509,10 @@
         
                     \begin{scope}[yshift=-3.6cm]
                         \node {M};
-                        \filldraw [semithick,fill=blz,scale=1.5,xshift=-2mm] plot [domain=pi/2:3*pi/2,smooth,variable=\thta] ({\thta r}:{15^0.5/4*cos(\thta r)^2});
-                        \filldraw [semithick,fill=blz,scale=1.5,xshift=2mm] plot [domain=-pi/2:pi/2,smooth,variable=\thta] ({\thta r}:{15^0.5/4*cos(\thta r)^2});
-                        \draw [semithick,scale=1.5,rotate=90,xshift=-2mm] plot [domain=pi/2:3*pi/2,smooth,variable=\thta] ({\thta r}:{15^0.5/4*cos(\thta r)^2});
-                        \draw [semithick,scale=1.5,rotate=90,xshift=2mm] plot [domain=-pi/2:pi/2,smooth,variable=\thta] ({\thta r}:{15^0.5/4*cos(\thta r)^2});
+                        \draw [semithick,scale=1.5,xshift=-2mm] plot [domain=pi/2:3*pi/2,smooth,variable=\thta] ({\thta r}:{15^0.5/4*cos(\thta r)^2});
+                        \draw [semithick,scale=1.5,xshift=2mm] plot [domain=-pi/2:pi/2,smooth,variable=\thta] ({\thta r}:{15^0.5/4*cos(\thta r)^2});
+                        \filldraw [semithick,fill=blz,scale=1.5,rotate=90,xshift=-2mm] plot [domain=pi/2:3*pi/2,smooth,variable=\thta] ({\thta r}:{15^0.5/4*cos(\thta r)^2});
+                        \filldraw [semithick,fill=blz,scale=1.5,rotate=90,xshift=2mm] plot [domain=-pi/2:pi/2,smooth,variable=\thta] ({\thta r}:{15^0.5/4*cos(\thta r)^2});
                     \end{scope}
         
                     \node [rotate=-90] at (0,-1.2) {\normalsize$:\longrightarrow$};
