--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -43,6 +43,12 @@
 
 
 
+\section{More Catalytic Processes}
+\subfile{PSet4/pset4.tex}
+\newpage
+
+
+
 \renewcommand{\leftmark}{References}
 \printbibliography[heading=bibintoc]
 
