--- a/preamble.tex
+++ b/preamble.tex
@@ -47,6 +47,7 @@
 \colorlet{rex}{red!40!black!70}
 
 \newcommand{\e}[1][]{\text{e}^{#1}}
+\newcommand{\coordsite}{\tikz{\filldraw [fill=blz,semithick] (0,0) rectangle (0.2,0.2);}}
 
 \newenvironment{tchart}[3]
 {
