Prof Office Hours 6

--- a/Notes/Unit5/Unit5.tex
+++ b/Notes/Unit5/Unit5.tex
@@ -335,5 +335,20 @@
 
 
 
+\section{Office Hours (Anderson)}
+\begin{itemize}
+    \item Chain walking is when the metal bonds to a $\sigma$ bond, moves to an adjacent carbon, moves to a double bond next, and on and on.
+    \begin{itemize}
+        \item The terminal olefins are sterically favored, even though the internal ones are typically thermodynamically favored.
+        \item Early metals typically make linear polyolefins, while late metals prefer branched ones.
+    \end{itemize}
+    \item What is the difference between a Chatt, distal, and alternating mechanism?
+    \begin{itemize}
+        \item Chatt and distal mechanisms are the same thing (known as Chatt due to Eurocentrism).
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
