--- a/Notes/Unit5/Unit5.tex
+++ b/Notes/Unit5/Unit5.tex
@@ -350,5 +350,27 @@
 
 
 
+\section{Discussion Section}
+\begin{itemize}
+    \item \marginnote{5/11:}HW5 is due 5/21/2021.
+    \item Discussion recordings will be posted in the Panopto folder from now on, but there may be a delay.
+    \item Point out dipole on \ce{CO} in Homework 4.1a.
+    \item Iron starts from \ce{Fe^I}.
+    \item Draws out and discusses the \ce{FeMoCO} enzyme (which is actually an enzyme, not just iron, molybdenum, and a carbonyl ligand).
+    \begin{itemize}
+        \item \ce{FeMoCO} possibly binds to \ce{CO} in bidentate fashion through two irons.
+        \begin{itemize}
+            \item This could support a Chatt mechanism since it would be easier to delocalize the higher oxidation state across two irons.
+        \end{itemize}
+        \item The iron in the center of \ce{FeMoCO} that forms six partial bonds and doesn't really make any sense is sometimes called a \textbf{Texas iron}.
+    \end{itemize}
+    \item Considers the 4-membered transition state and arrow-pushing for ROMP.
+    \item It's good to know what the end groups are for the purposes of NMR.
+    \item Goes over Figure \ref{fig:mechanism-hydroformylation} and Homework 4.4 in a bit more detail.
+    \item Goes over Homework 3.
+\end{itemize}
+
+
+
 
 \end{document}
