--- a/PSets/PSet4/pset4.tex
+++ b/PSets/PSet4/pset4.tex
@@ -209,7 +209,7 @@
     \begin{enumerate}
         \item \ce{Rh(PR3)3Cl}.
         \begin{proof}[Answer]
-            ${\color{white}hi}$
+            Dihydride mechanism:
             \begin{center}
                 \schemestart
                     \chemfig{Rh(-Cl)(-[2]PR_3)(-[4]R_3P)(-[6]PR_3)}
@@ -227,7 +227,7 @@
         \end{proof}
         \item \ce{HCo(CO)4}.
         \begin{proof}[Answer]
-            ${\color{white}hi}$
+            Monohydride mechanism:
             \begin{center}
                 \schemestart
                     \chemfig{Co(-CO)(-[6]CO)(<[:-150]OC)(>:[:160]OC)(-[2]H)}
@@ -246,7 +246,7 @@
         \newpage
         \item Noyori's catalyst.
         \begin{proof}[Answer]
-            ${\color{white}hi}$
+            Cooperative mechanism with bound amines.
             \begin{center}
                 \schemestart
                     \chemfig{Ru(-[:150]P)(-[:-150]P)(=[:30]\chemabove{N}{R})(-[:-30]\chembelow{N}{\,R_2}-[,0.5,,,white])(-[2,1.4]\phantom{i}-[4,0.4,,,white]H-H)}
@@ -294,11 +294,11 @@
                 \chemfig{Co(-(-[:60])-[:-60]-R)(-[6]CO)(-[4]CO)(-[2]CO)}
                 \arrow[-90]
                 \chemfig{Co(-\phantom{i}-[2,0.4,,,white]=^[6]-[:-30]-[:30]R)(-[6]CO)(<[:-150]OC)(>:[:160]OC)(-[2]H)}
-                \arrow[180]
+                \arrow[-90]
                 \chemfig{Co(--[:-60]--[:60]R)(-[6]CO)(-[4]CO)(-[2]CO)}
                 \arrow{->[*{0}\small\ce{CO}]}[-90]
                 \chemfig{Co(-(=[:60]O)-[:-60]--[:60]-[:120]R)(-[6]CO)(-[4]CO)(-[2]CO)}
-                \arrow{->[*{0}\small\ce{H2}]}[-90]
+                \arrow{->[*{0.-90}\small\ce{H2}]}[180]
                 \chemfig{Co(-(=[:60]O)-[:-60]--[:60]-[:120]R)(>:[1]CO)(-[2]H)(-[4]OC)(<[5]H)(-[6]CO)}
                 \arrow[180]
                 \chemfig{Co(-\phantom{i}-[2,0.4,,,white]O=_[6]-[:-30]-[:30]-[2]-[:150]R)(-[6]CO)(<[:-150]OC)(>:[:160]OC)(-[2]H)}
